--- a/package.json
+++ b/package.json
@@ -29,12 +29,15 @@
     "@electron-forge/maker-deb": "^6.1.1",
     "@electron-forge/maker-squirrel": "^6.1.1",
     "@electron-forge/maker-zip": "^6.1.1",
-    "@electron-forge/maker-rpm": "*",
-    "@electron-forge/maker-flatpak": "*",
     "electron": "24.1.3"
   },
   "config": {
     "forge": {
+      "packagerConfig": {
+        "ignore": [
+          ".*.exe"
+        ]
+      },
       "makers": [
         {
           "name": "@electron-forge/maker-zip",
@@ -44,17 +47,17 @@
           "name": "@electron-forge/maker-deb",
           "config": {
             "options": {
-              "name": "libredirect_frontends_manager",
-              "priority": "important",
-              "productName": "LibRedirect Frontends Manager",
-              "genericName": "LibRedirect",
-              "maintainer": "ManeraKai",
-              "homepage": "https://libredirect.github.io/",
-              "icon": "src/assets/imgs/icon.png",
               "categories": [
                 "Utility"
               ],
-              "description": "Host frontends locally on your computer."
+              "description": "Host frontends locally on your computer.",
+              "genericName": "LibRedirect",
+              "homepage": "https://libredirect.github.io/",
+              "maintainer": "ManeraKai",
+              "name": "libredirect_frontends_manager",
+              "priority": "important",
+              "productName": "LibRedirect Frontends Manager",
+              "icon": "src/assets/imgs/icon.png"
             }
           }
         }
