--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@electron-forge/cli": "^6.1.1",
     "@electron-forge/maker-deb": "^6.1.1",
     "@electron-forge/maker-zip": "^6.1.1",
+    "@electron-forge/maker-rpm": "6.1.1",
     "electron": "24.1.3"
   },
   "config": {
@@ -54,8 +55,20 @@
               "homepage": "https://libredirect.github.io/",
               "maintainer": "ManeraKai",
               "name": "libredirect_frontends_manager",
-              "priority": "important",
               "productName": "LibRedirect Frontends Manager",
+              "icon": "src/assets/imgs/icon.png"
+            }
+          }
+        },
+        {
+          "name": "@electron-forge/maker-rpm",
+          "config": {
+            "options": {
+              "description": "Host frontends locally on your computer.",
+              "genericName": "LibRedirect",
+              "productName": "LibRedirect Frontends Manager",
+              "name": "libredirect_frontends_manager",
+              "homepage": "http://example.com",
               "icon": "src/assets/imgs/icon.png"
             }
           }
