--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -13,7 +13,7 @@ edition = "2021"
 tauri-build = { version = "1.3", features = [] }
 
 [dependencies]
-tauri = { version = "1.3", features = ["fs-all", "os-all", "path-all", "shell-all", "system-tray", "window-all"] }
+tauri = { version = "1.3", features = ["fs-all", "http-all", "os-all", "path-all", "shell-all", "system-tray", "window-all"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 signal-hook = "0.3.15"
