Improved many things

--- a/src-tauri/docker_frontends/redis.yml
+++ b/src-tauri/docker_frontends/redis.yml
@@ -1,7 +1,7 @@
 version: '3.8'
 services:
   redis:
-    image: docker.io/_/redis
+    image: redis
     restart: unless-stopped
     ports:
       - '6379:6379'
