--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
   "name": "libredirect_frontends_manager",
   "private": true,
-  "version": "0.0.4",
+  "version": "0.0.5",
   "type": "module",
   "scripts": {
     "tauri": "tauri"
   },
   "devDependencies": {
-    "@tauri-apps/cli": "^1.3.0"
+    "@tauri-apps/cli": "^1.3.1"
+  },
+  "dependencies": {
+    "@tauri-apps/api": "^1.3.0"
   }
 }
