--- a/src-tauri/caddy/Caddyfile
+++ b/src-tauri/caddy/Caddyfile
@@ -40,3 +40,6 @@ http://searxng.localhost:8080 {
 http://teddit.localhost:8080 {
 	reverse_proxy localhost:10053
 }
+http://lingva_translate.localhost:8080 {
+	reverse_proxy localhost:10054
+}
