--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "libredirect_frontends_manager"
-version = "0.0.0"
-description = "A Tauri App"
+version = "0.0.6"
+description = "Host privacy frontends locally on your computer rather than relying on 3rd party instances"
 authors = ["you"]
 license = ""
 repository = ""
