--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "libredirect_frontends_manager",
   "private": true,
-  "version": "0.0.8",
+  "version": "0.0.9",
   "type": "module",
   "scripts": {
     "tauri": "tauri"
@@ -10,6 +10,7 @@
     "@tauri-apps/cli": "^1.3.1"
   },
   "dependencies": {
-    "@tauri-apps/api": "^1.3.0"
+    "@tauri-apps/api": "^1.3.0",
+    "@tauri-apps/plugin-fs-watch": "github:tauri-apps/tauri-plugin-fs-watch#v1"
   }
 }
