--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "libredirect_frontends_manager"
-version = "0.0.8"
+version = "0.0.9"
 description = "Host privacy frontends locally on your computer rather than relying on 3rd party instances"
 authors = ["you"]
 license = ""
@@ -17,6 +17,7 @@ tauri = { version = "1.3", features = ["dialog-all", "fs-all", "http-all", "os-a
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 signal-hook = "0.3.15"
+tauri-plugin-fs-watch = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem
