--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "version": "0.0.9",
   "type": "module",
   "scripts": {
-    "tauri": "tauri"
+    "tauri": "tauri",
+    "build": "tauri build",
+    "build-debug": "tauri build --debug"
   },
   "devDependencies": {
     "@tauri-apps/cli": "^1.3.1"
