--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@tauri-apps/api": "^1.3.0",
     "@tauri-apps/plugin-fs-watch": "github:tauri-apps/tauri-plugin-fs-watch#v1",
+    "tauri-plugin-autostart-api": "github:tauri-apps/tauri-plugin-autostart",
     "tauri-plugin-sql-api": "github:tauri-apps/tauri-plugin-sql"
   }
 }
