--- a/package.json
+++ b/package.json
@@ -12,9 +12,6 @@
     "@tauri-apps/cli": "^1.3.1"
   },
   "dependencies": {
-    "@tauri-apps/api": "^1.3.0",
-    "@tauri-apps/plugin-fs-watch": "github:tauri-apps/tauri-plugin-fs-watch#v1",
-    "tauri-plugin-autostart-api": "github:tauri-apps/tauri-plugin-autostart",
-    "tauri-plugin-sql-api": "github:tauri-apps/tauri-plugin-sql"
+    "@tauri-apps/api": "^1.3.0"
   }
 }
