--- a/package.json
+++ b/package.json
@@ -9,9 +9,7 @@
     "build-debug": "tauri build --debug"
   },
   "devDependencies": {
-    "@tauri-apps/cli": "^1.3.1",
-    "@tauri-apps/cli-win32-x64-msvc": "^1.5.10",
-    "@tauri-apps/cli-linux-arm64-gnu": "^1.5.10"
+    "@tauri-apps/cli": "^1.5.10"
   },
   "dependencies": {
     "@tauri-apps/api": "^1.3.0"
