--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,6 +35,10 @@ jobs:
 
       - name: Install frontend dependencies
         run: npm install
+          
+      - name: Install dependencies (windows only)
+        if: matrix.platform == 'windows-latest'
+        run: npm install @tauri-apps/cli-win32-x64-msvc
 
       - uses: tauri-apps/tauri-action@v0.4.4
 
