--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -11,13 +11,15 @@ edition = "2021"
 tauri-build = { version = "1.3", features = [] }
 
 [dependencies]
-tauri = { version = "1.3", features = ["dialog-all", "fs-all", "http-all", "os-all", "path-all", "process-exit", "process-relaunch", "shell-all", "system-tray", "window-all"] }
+tauri = { version = "1.3", features = ["dialog-all", "fs-all", "http-all", "os-all", "path-all", "process-exit", "process-relaunch", "shell-all", "system-tray", "window-all", "devtools"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 signal-hook = "0.3.15"
 tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
 tauri-plugin-autostart = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
 ureq = "2.9.6"
+tar = "0.4.40"
+flate2 = "1.0.28"
 
 [features]
 custom-protocol = ["tauri/custom-protocol"]
