--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -11,7 +11,7 @@ edition = "2021"
 tauri-build = { version = "1.3", features = [] }
 
 [dependencies]
-tauri = { version = "1.3", features = ["dialog-all", "fs-all", "http-all", "os-all", "path-all", "process-exit", "process-relaunch", "system-tray", "window-all", "devtools"] }
+tauri = { version = "1.3", features = [ "shell-all", "dialog-all", "fs-all", "http-all", "os-all", "path-all", "process-exit", "process-relaunch", "system-tray", "window-all", "devtools"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 signal-hook = "0.3.15"
