--- a/src-tauri/src/Caddyfile
+++ b/src-tauri/src/Caddyfile
@@ -25,3 +25,6 @@ http://dumb.localhost:8080 {
 http://gothub.localhost:8080 {
 	reverse_proxy localhost:10048
 }
+http://neuters.localhost:8080 {
+	reverse_proxy localhost:10049
+}
