--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build-debug": "tauri build --debug"
   },
   "devDependencies": {
-    "@tauri-apps/cli": "^1.5.10"
+    "@tauri-apps/cli": "^1.5.10",
+    "prettier": "3.3.3"
   },
   "dependencies": {
     "@tauri-apps/api": "^1.3.0"
