--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -11,7 +11,7 @@ edition = "2021"
 tauri-build = { version = "1.3", features = [] }
 
 [dependencies]
-tauri = { version = "1.3", features = [ "shell-all", "dialog-all", "process-exit", "process-relaunch", "system-tray", "window-all", "devtools"] }
+tauri = { version = "1.3", features = [ "fs-all", "shell-all", "dialog-all", "process-exit", "process-relaunch", "system-tray", "window-all", "devtools"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 signal-hook = "0.3.15"
@@ -21,6 +21,10 @@ ureq = "2.9.6"
 tar = "0.4.40"
 flate2 = "1.0.28"
 zip_next = "1.1.0"
+bollard = "0.15.0"
+futures-util = "0.3.30"
+socket2 = "0.4.2"
+rand = "0.8.4"
 
 [features]
 custom-protocol = ["tauri/custom-protocol"]
